--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,49 @@
-name: Deploy Vite + React to GitHub Pages
+name: Deploy
 
 on:
   push:
     branches:
-      - main  # Passe den Branch an, falls nötig
+      - main
 
 jobs:
-  build-and-deploy:
+  build:
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Install Node.js
+      - name: Setup Node
         uses: actions/setup-node@v3
-        with:
-          node-version: 18  # Falls du eine andere Version nutzt, anpassen
 
-      - name: Install Dependencies
-        run: npm install
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
 
-      - name: Build Project
+      - name: Build project
         run: npm run build
 
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Upload production-ready build files
+        uses: actions/upload-artifact@v3
         with:
-          branch: gh-pages  # Der Branch, in den die statischen Dateien gepusht werden
-          folder: dist  # Der Ordner, den Vite erzeugt
+          name: production-files
+          path: ./dist
+
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: production-files
+          path: ./dist
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
