--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.12.0",
     "framer-motion": "^12.4.4",
     "lucide-react": "^0.474.0",
     "motion": "^12.4.4",
