--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tabler/icons-react": "^3.30.0",
     "@tailwindcss/vite": "^4.0.3",
     "@tiptap/extension-image": "^2.11.5",
+    "@tiptap/extension-link": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "bcryptjs": "^3.0.2",
